<resources>
    <string name="app_name">frame</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>

    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>

    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>

    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>

    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>

    <string name="loading">Loading</string>

    <string name="newTag">New!</string>
    <string name="discard">Discard</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="sorroy">抱歉</string>
    <string name="no_current_data">暂时没有对应数据</string>
    <string name="failed_content">重新加载</string>
    <string name="base_load_failed_title">数据加载失败</string>
    <string name="base_load_failed_des">失败原因可能是:\n1.本页面内容已不存在\n2.本页面加载失败\n3.您的网络异常，请检查网络</string>
    <string name="get_data_error">数据加载失败了,请检查一下网络，再重新加载</string>
    <string name="no_data">无更多数据</string>
</resources>
