<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_white_bg_corner"
    android:gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/dialog_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/dialog_with_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/px200"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/px10"
                android:layout_marginTop="@dimen/px40"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/common_big_title_text"
                android:textSize="@dimen/font_36px" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/dialog_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginBottom="@dimen/px40"
                    android:layout_marginLeft="@dimen/px40"
                    android:layout_marginRight="@dimen/px40"
                    android:gravity="center_horizontal|top"
                    android:textColor="@color/black_565656"
                    android:textSize="@dimen/font_28px" />
            </ScrollView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dialog_msg_no_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/px40"
                android:layout_marginLeft="@dimen/px40"
                android:layout_marginRight="@dimen/px40"
                android:layout_marginTop="@dimen/px40"
                android:gravity="center|center_vertical"
                android:minHeight="@dimen/px95"
                android:textColor="@color/black_565656"
                android:textSize="@dimen/font_28px"
                android:visibility="gone" />
        </ScrollView>
    </FrameLayout>

    <ListView
        android:id="@+id/dialog_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px40"
        android:layout_marginTop="@dimen/px20"
        android:cacheColorHint="@color/transparent"
        android:divider="@null"
        android:visibility="gone" >
    </ListView>

    <LinearLayout
        android:id="@+id/dialog_btn_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <View style="@style/divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/common_white_bottomleft_cornor_selector"
                android:gravity="center"
                android:padding="@dimen/px20"
                android:text="@string/no"
                android:textColor="@color/black_565656"
                android:textSize="@dimen/font_36px"
                android:visibility="gone" />

            <View
                android:id="@+id/btn_divider"
                style="@style/divider_vertical"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/dialog_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/common_white_bottomright_cornor_selector"
                android:gravity="center"
                android:padding="@dimen/px20"
                android:text="@string/yes"
                android:textColor="@color/black_565656"
                android:textSize="@dimen/font_36px"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/image_chooser_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px78"
        android:layout_margin="@dimen/px40"
        android:text="@string/cancel"
        android:visibility="gone" >
    </TextView>

</LinearLayout>